# apex

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .yamllint.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  QUICKSTART.md  README.md  SECURITY.md  docker-compose.monitoring.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  migrations
.claude/: ralph-loop.local.md
.devcontainer/: devcontainer.json  docker-compose.yml  post-create.sh  post-start.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  mlc_config.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml  docs.yml  release.yml  security.yml
benchmarks/: README.md  load_test.py
benchmarks/k6/: load-test.js  soak-test.js  stress-test.js
benchmarks/locust/: locustfile.py
benchmarks/results/: .gitkeep
config/: development.toml  production.toml  staging.toml
docker/: Dockerfile.api  Dockerfile.dashboard  Dockerfile.dev  Dockerfile.worker
docker/scripts/: entrypoint.sh  shell-init.sh
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  PERFORMANCE.md  RUNBOOK.md  TROUBLESHOOTING.md  openapi.yaml
docs/adr/: 0000-adr-template.md  0001-rust-for-orchestration.md  0002-python-for-agents.md  0003-dag-execution-model.md  0004-frugalgpt-routing.md  0005-contract-framework.md  0006-observability-stack.md  README.md
docs/architecture/: backend-architecture.md  database-design.md  infrastructure-design.md  security-design.md
docs/design/: frontend-design.md
docs/plans/: 2026-01-30-apex-build-verify-harden.md
docs/research/: competitive-analysis.md
examples/: README.md
examples/curl/: api-examples.sh  websocket-test.sh
examples/python/: advanced_dag.py  async_streaming.py  basic_usage.py  cost_optimization.py  dag_workflow.py  monitoring.py
examples/typescript/: advanced-dag.ts  basic-usage.ts  batch-processing.ts  dag-workflow.ts  real-time-monitoring.ts  realtime-dashboard.ts
infra/docker/: Dockerfile.api  Dockerfile.sandbox  postgres-dev.conf
infra/terraform/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
plugins/example-hello/: plugin.toml
scripts/: benchmark.sh  load-test.sh  migrate.sh  run-integration-tests.sh  setup.sh  test.sh
sdk/python/: README.md  pyproject.toml
sdk/python/apex_sdk/: __init__.py  client.py  exceptions.py  models.py  websocket.py
sdk/python/tests/: __init__.py  test_client.py
sdk/typescript/: README.md  jest.config.js  package.json
src/backend/agents/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  ruff.toml
src/backend/agents/apex_agents/: __init__.py  agent.py  bidding.py  config.py  executor.py  llm.py  loop_detector.py  routing.py  tools.py  tracing.py  worker.py
src/backend/agents/tests/: __init__.py  conftest.py  test_agent.py  test_bidding.py  test_config.py  test_config_validation_edge_cases.py  test_executor.py  test_executor_errors.py  test_llm.py  test_llm_retry.py  test_loop_detector.py  test_loop_detector_edge_cases.py  test_routing.py  test_tools.py  test_tools_edge_cases.py  test_tracing.py  test_worker.py  test_worker_pool_integration.py
src/backend/core/: .dockerignore  Cargo.toml  Dockerfile  build.rs  clippy.toml  rustfmt.toml
src/backend/core/.sqlx/: .gitkeep
src/backend/core/benches/: cache_bench.rs  dag_bench.rs  orchestrator_bench.rs  routing_bench.rs  validation_bench.rs
src/backend/core/migrations/: 001_initial.sql  20240101000000_initial_schema.sql  20240101000001_indexes.sql  20240101000002_functions.sql  20240101000003_seed_data.sql  20240101000004_rbac_tables.sql
src/backend/core/proto/: apex.proto
src/backend/core/src/: config.rs  error.rs  lib.rs  main.rs
src/backend/core/src/agents/: mod.rs
src/backend/core/src/api/: grpc.rs  handlers.rs  middleware.rs  mod.rs  versioning.rs  websocket.rs
src/backend/core/src/api/v1/: mod.rs  plugins.rs  routes.rs
src/backend/core/src/api/v2/: mod.rs
src/backend/core/src/cache/: backend.rs  invalidation.rs  key.rs  middleware.rs  mod.rs
src/backend/core/src/contracts/: enforcement.rs  limits.rs  mod.rs  tracker.rs
src/backend/core/src/dag/: executor.rs  mod.rs  scheduler.rs  task.rs
src/backend/core/src/db/: health.rs  mod.rs
src/backend/core/src/events/: aggregate.rs  crdt.rs  event.rs  mod.rs
src/backend/core/src/health/: check.rs  checker.rs  mod.rs  routes.rs
src/backend/core/src/jobs/: builtin.rs  job.rs  mod.rs  queue.rs  scheduler.rs  worker.rs
src/backend/core/src/middleware/: api_key_rotation.rs  audit.rs  auth.rs  compression.rs  csrf.rs  input_sanitizer.rs  mod.rs  rate_limit.rs  request_size.rs  security_headers.rs  tracing.rs
src/backend/core/src/observability/: mod.rs
src/backend/core/src/orchestrator/: circuit_breaker.rs  cnp.rs  mod.rs  worker_pool.rs
src/backend/core/src/pagination/: cursor.rs  mod.rs  offset.rs  query.rs  response.rs
src/backend/core/src/plugins/: manifest.rs  mod.rs  registry.rs  sandbox.rs
src/backend/core/src/rbac/: middleware.rs  mod.rs  models.rs  policy.rs  roles.rs
src/backend/core/src/routing/: mod.rs
src/backend/core/src/telemetry/: logging.rs  metrics.rs  mod.rs  tracing.rs
src/backend/core/src/validation/: error.rs  macros.rs  mod.rs  rules.rs  validator.rs
src/backend/core/src/websocket/: auth.rs  broadcast.rs  handler.rs  message.rs  mod.rs  room.rs  session.rs
src/backend/core/tests/: api_tests.rs  circuit_breaker_tests.rs  contract_tests.rs  dag_tests.rs  integration_tests.rs  routing_tests.rs  worker_pool_tests.rs
src/cli/: Cargo.toml
src/cli/src/: client.rs  main.rs  output.rs
src/cli/src/commands/: agent.rs  config.rs  health.rs  mod.rs  swarm.rs  task.rs
src/frontend/: .dockerignore  .env.example  .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
tests/e2e/: conftest.py  test_smoke.py
tests/integration/: README.md  (+11 more)
(+111 files in other folders)
