[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apex-sdk"
version = "0.1.0"
description = "Python SDK for the Project Apex API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Aezi", email = "aezi.zhu@icloud.com" }
]
keywords = ["apex", "api", "sdk", "agents", "tasks", "dag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "websockets>=12.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.22.0",
    "respx>=0.20.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/aezi/apex-sdk"
Documentation = "https://github.com/aezi/apex-sdk#readme"
Repository = "https://github.com/aezi/apex-sdk"

[tool.hatch.build.targets.wheel]
packages = ["apex_sdk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.9"
strict = true
plugins = ["pydantic.mypy"]
