[package]
name = "apex-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"
authors = ["Aezi <aezi.zhu@icloud.com>"]
description = "CLI tool for managing Apex agent swarms"
license = "Apache-2.0"
repository = "https://github.com/apex-swarm/apex"

[[bin]]
name = "apex"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive", "color", "suggestions", "unicode", "env"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Output formatting
tabled = "0.15"
colored = "2.1"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
toml = "0.8"
